Added All controllers, Spring security, token and refresh based authentication, Security filters, Admin access